fixes breaks in header links on small screens

--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -209,7 +209,7 @@
 
 .header-links {
   margin: 0 1.2rem;
-  padding: 15px;
+  padding: 4px;
 }
 
 .sidebar-logo {
